[package]
name = "choices"
version = "0.1.0"
authors = ["Patrick Elsen <pelsen@xfbs.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rand_distr = "0.3.0"
structopt = "0.3.20"
anyhow = "1.0.33"
threadpool = "1.8.1"
average = "0.10.6"
